Fix overflow problem

--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -17,4 +17,9 @@ input[type]{
 button[type]{
    float: left;
    width: 50%;
+   min-width: 65px;
+   font-size: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+   text-overflow: ellipsis ellipsis;
 }
